--- a/frontend/src/componentes/NotificationButton/styles.css
+++ b/frontend/src/componentes/NotificationButton/styles.css
@@ -9,7 +9,23 @@
     justify-content: center;
     cursor: pointer;
   }
-  
-  .dsmeta-red-btn img {
-      width: 19px;
-  }
+
+.dsmeta-logo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmeta-logo-container img {
+    width: 235px;
+}
+
+.dsmeta-logo-container h1 {
+    margin-top: 15px;
+    font-size: 24px;
+}
+
+.dsmeta-logo-container p {
+    font-size: 14px;
+    font-weight: 300;
+}
